@@ -22,6 +22,9 @@ glibc (2.3.5-5) unstable; urgency=low
     * debian/patches/glibc235-localedata-locales.dpatch: New file, to fix
       mn_MN and sid_ET localedef breakage.  (Closes: #321634)
 
+    * debian/sysdeps/powerpc.mk: Enable PowerPC NPTL.
+      (Closes: #246689, #307984)
+
  -- GOTO Masanori <gotom@debian.org>  Sun, 21 Aug 2005 12:33:42 +0900
 
 glibc (2.3.5-4) unstable; urgency=low
